# bevy_copperfield

./: Cargo.toml  README.md  output
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  test.yml
examples/: chess.rs  debug.rs  simple_ops.rs  sticks.rs
src/: lib.rs  mesh.rs  mesh_builders.rs  uvmesh.rs
src/mesh/: attributes.rs  edge_ops.rs  face_ops.rs  mesh_ops.rs  selection.rs  traversal.rs  vertex_ops.rs
src/uvmesh/: fit.rs  least_squares_conformal_maps.rs  primitive_mapping.rs  sphere_mapping.rs
