[package]
name = "bevy_copperfield"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = "0.14.2"
itertools = "0.13.0"
noise = "0.9.0"
num-traits = "0.2.19"
slotmap = "1.0.7"
smallvec = "1.13.2"
