[package]
name = "bevy_copperfield"
description = "Procedural mesh editor, based on Half-Edge-Mesh datastructure"
repository = "https://github.com/Hexorg/bevy_copperfield"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version ="0.14.2", features=["jpeg"]}
earcutr = "0.4.3"
itertools = "0.13.0"
line_drawing = "1.0.0"
noise = "0.9.0"
slotmap = "1.0.7"
smallvec = "1.13.2"
sprs = "0.11.2"
